<resources>
    <string name="app_name">Notes App</string>
    <string name="delete_note">Delete note</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="add_note_button">Add Note Button</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="empty_not_saved">Failed to Save Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="update">Update</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="delete_notes">Delete Notes</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="view_note">View Note</string>
    <string name="edit">Edit</string>
</resources>